--- a/public/courses.html
+++ b/public/courses.html
@@ -1,263 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>IT & Graphic Design Courses – Anjali Jogale</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Courses - DigiLearn</title>
 
-    header {
-      background: #222;
-      padding: 10px 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 50px;
-    }
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-    .navbar {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    .navbar a {
-      color: #fff;
-      text-decoration: none;
-      padding: 12px 20px;
-      border-radius: 6px;
-      font-size: 1rem;
-      transition: background 0.3s ease;
-    }
-
-    .navbar a:hover {
-      background-color: #ff7a59; /* Your main theme color */
-    }
-
-    .navbar a.active {
-      background-color: #800000; /* Maroon for active link */
-    }
-
-    .logo img {
-      width: 120px;
-    }
-
-    .heading {
-      text-align: center;
-      font-size: 2.5rem;
-      margin: 40px 0 20px;
-      color: #800000; /* Maroon color for IT Courses heading */
-    }
-
-    .heading span {
-      color: #ff7a59; /* Highlighted part of the heading */
-    }
-
-    .class-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      padding: 0 50px 60px;
-    }
-
-    .class-box {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .class-box:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 12px 28px rgba(0, 0, 0, 0.15);
-    }
-
-    .class-box img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-
-    .class-box h3 {
-      padding: 16px 20px 5px;
-      margin: 0;
-      color: #800000; /* Maroon color for course names */
-      font-size: 1.2rem;
-    }
-
-    .class-box p {
-      padding: 0 20px;
-      font-size: 0.95rem;
-      color: #555;
-    }
-
-    .course-info {
-      padding: 0 20px;
-      color: #777;
-      font-size: 0.85rem;
-      margin-bottom: 10px;
-    }
-
-    .class-box a.enroll-btn {
-      margin: 15px 20px 20px;
-      padding: 10px;
-      text-align: center;
-      background-color: #800000; /* Maroon color */
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: 500;
-      transition: background 0.3s ease;
-    }
-
-    .class-box a.enroll-btn:hover {
-      background-color: #660000; /* Darker maroon on hover */
-    }
-
-    .footer {
-      text-align: center;
-      padding: 20px;
-      background: #222;
-      color: #fff;
-    }
-
-    @media (max-width: 768px) {
-      .heading {
-        font-size: 2rem;
+    <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        background-color: #f8f9fa;
       }
 
-      .class-container {
-        padding: 0 20px 40px;
+      nav.navbar {
+        background-color: white !important;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       }
-    }
-  </style>
-</head>
-<body>
 
-  <header>
-    <div class="logo">
-      <img src="assets/images/digilearn-logo.png" alt="Digilearn Logo">
-    </div>
-    <nav class="navbar">
-      <a href="https://anjalijogale.netlify.app#home" class="active">Home</a>
-      <a href="https://anjalijogale.netlify.app#about">About</a>
-      <a href="https://anjalijogale.netlify.app#our-class">Courses</a>
-      <a href="https://anjalijogale.netlify.app#contact">Contact</a>
+      .nav-link {
+        color: #333 !important;
+        font-weight: 600;
+        margin: 0 12px;
+      }
+
+      .nav-link:hover {
+        color: maroon !important;
+      }
+
+      .section-title {
+        color: maroon;
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin-top: 40px;
+        margin-bottom: 20px;
+      }
+
+      .card {
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+        border: none;
+        border-radius: 16px;
+        transition: 0.3s ease;
+      }
+
+      .card:hover {
+        transform: translateY(-5px);
+      }
+
+      .btn-enroll {
+        background-color: maroon;
+        color: white;
+        font-weight: 600;
+        border-radius: 30px;
+        padding: 10px 20px;
+        transition: 0.3s ease;
+      }
+
+      .btn-enroll:hover {
+        background-color: #800000;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img src="assets/logo/Logo.svg" alt="DigiLearn Logo" height="40" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="/#about-us">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="/courses.html">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-semibold" href="/#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-  </header>
 
-  <section class="our-class" id="our-class">
-    <h2 class="heading">IT & Graphic Design <span>Courses</span></h2>
+    <!-- Page Title -->
+    <h2 class="section-title">Our IT & Graphics Courses</h2>
 
-    <div class="class-container">
-      <!-- IT Courses -->
-      <div class="class-box">
-        <img src="assets/images/web-development.jpg" alt="Web Development">
-        <h3>Web Development</h3>
-        <p>Build responsive websites using HTML, CSS, JavaScript, and modern frameworks.</p>
-        <div class="course-info">Duration: 8 weeks</div>
-        <a href="course-web.html" class="enroll-btn">Enroll Now</a>
+    <!-- Course Cards -->
+    <div class="container my-5">
+      <div class="row g-4">
+        <!-- Course Card 1 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">Full Stack Development</h5>
+              <p class="card-text">
+                Learn MERN stack with real-world projects and deployment.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Card 2 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">UI/UX Design</h5>
+              <p class="card-text">
+                Master tools like Figma, Adobe XD and create stunning UI.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Card 3 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">Data Science with Python</h5>
+              <p class="card-text">
+                Learn Python, NumPy, Pandas, ML models, and more.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Card 4 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">Graphic Design</h5>
+              <p class="card-text">
+                Photoshop, Illustrator, and Canva-based practical projects.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Card 5 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">Digital Illustration</h5>
+              <p class="card-text">
+                Create professional digital art and concept illustrations.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course Card 6 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-maroon">Video Editing</h5>
+              <p class="card-text">
+                Learn Premiere Pro, After Effects, and cinematic storytelling.
+              </p>
+              <a href="#" class="btn btn-enroll">Enroll Now</a>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="class-box">
-        <img src="assets/images/data-science.jpg" alt="Data Science">
-        <h3>Data Science</h3>
-        <p>Explore data analytics, visualization, and machine learning using Python.</p>
-        <div class="course-info">Duration: 10 weeks</div>
-        <a href="course-data.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/cyber-security.jpg" alt="Cybersecurity">
-        <h3>Cybersecurity</h3>
-        <p>Learn ethical hacking, network defense, and system protection fundamentals.</p>
-        <div class="course-info">Duration: 6 weeks</div>
-        <a href="course-cyber.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/ui-ux.jpg" alt="UI/UX Design">
-        <h3>UI/UX Design</h3>
-        <p>Design intuitive, modern interfaces using Figma and best UX practices.</p>
-        <div class="course-info">Duration: 5 weeks</div>
-        <a href="course-uiux.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/cloud-computing.jpg" alt="Cloud Computing">
-        <h3>Cloud Computing</h3>
-        <p>Master AWS, Azure, and cloud deployment for scalable app architecture.</p>
-        <div class="course-info">Duration: 7 weeks</div>
-        <a href="course-cloud.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/mobile-app.jpg" alt="Mobile App Development">
-        <h3>Mobile App Development</h3>
-        <p>Build mobile apps with Flutter, and deploy them on iOS & Android platforms.</p>
-        <div class="course-info">Duration: 8 weeks</div>
-        <a href="course-mobile.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <!-- New Graphic Design Courses -->
-      <div class="class-box">
-        <img src="assets/images/graphic-design.jpg" alt="Graphic Design">
-        <h3>Graphic Design</h3>
-        <p>Learn the basics of design using Photoshop, Illustrator, and InDesign.</p>
-        <div class="course-info">Duration: 6 weeks</div>
-        <a href="course-graphic-design.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/photoshop.jpg" alt="Adobe Photoshop">
-        <h3>Adobe Photoshop</h3>
-        <p>Master Photoshop for photo editing, digital painting, and graphic creation.</p>
-        <div class="course-info">Duration: 4 weeks</div>
-        <a href="course-photoshop.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/illustrator.jpg" alt="Adobe Illustrator">
-        <h3>Adobe Illustrator</h3>
-        <p>Create vector artwork, logos, and illustrations using Illustrator.</p>
-        <div class="course-info">Duration: 5 weeks</div>
-        <a href="course-illustrator.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/indesign.jpg" alt="Adobe InDesign">
-        <h3>Adobe InDesign</h3>
-        <p>Design professional layouts for print and digital media using InDesign.</p>
-        <div class="course-info">Duration: 6 weeks</div>
-        <a href="course-indesign.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
-      <div class="class-box">
-        <img src="assets/images/3d-modeling.jpg" alt="3D Modeling">
-        <h3>3D Modeling</h3>
-        <p>Learn 3D modeling techniques for games, animation, and virtual reality.</p>
-        <div class="course-info">Duration: 8 weeks</div>
-        <a href="course-3d-modeling.html" class="enroll-btn">Enroll Now</a>
-      </div>
-
     </div>
-  </section>
 
-  <footer class="footer">
-    <p>&copy; 2025 Anjali Jogale. All rights reserved.</p>
-  </footer>
-
-</body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
