--- a/public/courses.html
+++ b/public/courses.html
@@ -69,6 +69,12 @@
       .btn-enroll:hover {
         background-color: #800000;
       }
+
+      .card-img-top {
+        height: 200px;
+        object-fit: cover;
+        border-radius: 10px 10px 0 0;
+      }
     </style>
   </head>
   <body>
@@ -114,6 +120,7 @@
         <!-- Course Card 1 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/full-stack.jpg" alt="Full Stack Development" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">Full Stack Development</h5>
               <p class="card-text">
@@ -127,6 +134,7 @@
         <!-- Course Card 2 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/ui-ux.jpg" alt="UI/UX Design" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">UI/UX Design</h5>
               <p class="card-text">
@@ -140,6 +148,7 @@
         <!-- Course Card 3 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/data-science.jpg" alt="Data Science with Python" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">Data Science with Python</h5>
               <p class="card-text">
@@ -153,6 +162,7 @@
         <!-- Course Card 4 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/graphic-design.jpg" alt="Graphic Design" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">Graphic Design</h5>
               <p class="card-text">
@@ -166,6 +176,7 @@
         <!-- Course Card 5 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/digital-illustration.jpg" alt="Digital Illustration" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">Digital Illustration</h5>
               <p class="card-text">
@@ -179,6 +190,7 @@
         <!-- Course Card 6 -->
         <div class="col-md-4">
           <div class="card h-100">
+            <img src="assets/images/video-editing.jpg" alt="Video Editing" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-maroon">Video Editing</h5>
               <p class="card-text">
