--- a/public/courses.html
+++ b/public/courses.html
@@ -57,7 +57,7 @@
         transform: translateY(-5px);
       }
 
-      .btn-enroll {
+      .btn-start {
         background-color: maroon;
         color: white;
         font-weight: 600;
@@ -66,7 +66,7 @@
         transition: 0.3s ease;
       }
 
-      .btn-enroll:hover {
+      .btn-start:hover {
         background-color: #800000;
       }
 
@@ -126,7 +126,7 @@
               <p class="card-text">
                 Learn MERN stack with real-world projects and deployment.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
               <p class="card-text">
                 Master tools like Figma, Adobe XD and create stunning UI.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
@@ -154,7 +154,7 @@
               <p class="card-text">
                 Learn Python, NumPy, Pandas, ML models, and more.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
               <p class="card-text">
                 Photoshop, Illustrator, and Canva-based practical projects.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
               <p class="card-text">
                 Create professional digital art and concept illustrations.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
               <p class="card-text">
                 Learn Premiere Pro, After Effects, and cinematic storytelling.
               </p>
-              <a href="#" class="btn btn-enroll">Enroll Now</a>
+              <a href="#" class="btn btn-start">Start Now</a>
             </div>
           </div>
         </div>
