--- a/index.html
+++ b/index.html
@@ -39,17 +39,9 @@
   <!-- Vite Entry Script -->
   <script type="module" src="/src/main.jsx"></script>
 
-  <!-- Optionally add Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz4fnFO9gybGzMzkG2v8ECqjK5K7dBDB1wCj7s5yFfzH2eXwn1gc9sl1lb"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cjs8a4+Hp8m5JvR40vVPA5tY8RnlScQeN4A7FfU7TtUt2Jbg6ytj7ZlFvN2J8zt4"
-    crossorigin="anonymous"
-  ></script>
+  <!-- Updated Bootstrap JS and Popper.js without integrity check -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
